--- a/index.ipynb
+++ b/index.ipynb
@@ -204,9 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"art.vandelay@vandelay.co\".endswith(\"com\") # False"
    ]
@@ -227,7 +238,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "end = 'vandelay.com'\n",
+    "start = # 'www.vandelay.com'"
    ]
   },
   {
