Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,8 @@
    "outputs": [],
    "source": [
     "end = 'vandelay.com'\n",
-    "start = # 'www.vandelay.com'"
+    "start = 'www.'\n",
+    "final = # 'www.vandelay.com'"
    ]
   },
   {
