--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
    "source": [
     "end = 'vandelay.com'\n",
     "start = 'www.'\n",
-    "final = # 'www.vandelay.com'"
+    "final = start + end# 'www.vandelay.com'"
    ]
   },
   {
