Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,8 @@
    "source": [
     "end = 'vandelay.com'\n",
     "start = 'www.'\n",
-    "final = start + end# 'www.vandelay.com'"
+    "final = start + end\n",
+    "print(final)# 'www.vandelay.com'"
    ]
   },
   {
