--- a/index.ipynb
+++ b/index.ipynb
@@ -231,12 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "www.vandelay.com\n"
+     ]
+    }
+   ],
    "source": [
     "end = 'vandelay.com'\n",
     "start = 'www.'\n",
